# NLP_Assignment1_st126316

./: .gitignore
Assignment2-LSTM/: README.md  main.py 11-30-12-696 AM.py  pyproject.toml
Assignment2-LSTM/app/: app.py
Assignment3-Machine Translation/: A3.ipynb  A3_test_v1.ipynb  main.py 12-13-45-527 PM.py  pyproject.toml
Assignment3-Machine Translation/app/: app.py
Assignment3-Machine Translation/my-alt-190530/: README.txt
Assignment4-BERT/: A4.ipynb  README.md  pyproject.toml
Assignment4-BERT/app/: app.py
Assignment4-BERT/bert_mlm_scratch_final/: config.json
Assignment4-BERT/sbert_nli_model/: config.json
