[project]
name = "assignment4-bert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.1.0",
    "datasets>=4.5.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.1.0",
]
